# Enterprise_Data_Comparison

./: 01_Requirements_Audit_Report_EDCP_v2.docx  02_Installation_and_Usage_Guide_v2.docx  03_Capabilities_and_Features_Guide_v2.docx  DataComparePro_Capabilities_Features_Guide_v2.docx  DataComparePro_Codex_Fix_Audit_Report_v4.docx  DataComparePro_Installation_Guide_v2.docx  DataComparePro_Test_Execution_Results_v2.docx  DataComparePro_v2.0_Test_Report.html  DataComparePro_v4_Complete_Audit_Report.docx  DataComparePro_v4_MVP_Review_Report.docx
DataComparePro_v3_complete/DataComparePro_v3_package/edcp/: README.md  pyproject.toml  requirements.txt
DataComparePro_v3_complete/DataComparePro_v3_package/edcp/data_compare/config/: config_loader.py  config_schema.py
DataComparePro_v3_complete/DataComparePro_v3_package/edcp/data_compare/utils/: __init__.py
DataComparePro_v3_complete/DataComparePro_v3_package/edcp/edcp/batch/: batch_manager.py  recovery_manager.py
DataComparePro_v3_complete/DataComparePro_v3_package/edcp/edcp/capabilities/: __init__.py
DataComparePro_v3_complete/DataComparePro_v3_package/edcp/edcp/comparator/: tolerance.py
DataComparePro_v3_complete/DataComparePro_v3_package/edcp/edcp/reporting/: json_audit.py
DataComparePro_v3_complete/DataComparePro_v3_package/edcp/tests/: test_comparison.py  test_config_edge_cases.py  test_data_types.py  test_duplicates.py  test_edge_cases.py  test_tolerance.py
DataComparePro_v3_final/DataComparePro_v3_package/edcp/: pyproject.toml  run.py
DataComparePro_v3_final/DataComparePro_v3_package/edcp/data_compare/config/: config_loader.py
DataComparePro_v3_final/DataComparePro_v3_package/edcp/data_compare/jobs/: comparison_job.py
DataComparePro_v3_final/DataComparePro_v3_package/edcp/data_compare/reporting/: report_builder.py
DataComparePro_v3_final/DataComparePro_v3_package/edcp/edcp/: main.py  orchestrator.py
DataComparePro_v3_final/DataComparePro_v3_package/edcp/edcp/batch/: __init__.py  batch_manager.py
DataComparePro_v3_final/DataComparePro_v3_package/edcp/edcp/comparator/: core.py
DataComparePro_v3_final/DataComparePro_v3_package/edcp/edcp/config/: config_loader.py
DataComparePro_v3_final/DataComparePro_v3_package/edcp/edcp/reporting/: excel_report.py  html_report.py
DataComparePro_v3_final/DataComparePro_v3_package/edcp/tests/: __init__.py  test_key_edge_cases.py  test_parquet.py
(+155 files in other folders)
