[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "edcp"
version         = "3.0.0"
description     = "DataComparePro — Enterprise Data Comparison Platform"
readme          = "README.md"
requires-python = ">=3.8"
keywords        = ["data comparison", "ETL validation", "enterprise", "batch", "parquet"]
classifiers     = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies    = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "openpyxl>=3.0.0",
    "PyYAML>=5.4",
    "flask>=3.0.0",
]

[project.optional-dependencies]
parquet = ["pyarrow>=12.0"]
spark   = ["pyspark>=3.0"]
win32   = ["pywin32>=300"]
# psutil is used in test_extended_v3.py stability tests only — optional
monitoring = ["psutil>=5.9.0"]
dev     = ["pytest>=7.0", "pytest-cov", "psutil>=5.9.0"]

[project.scripts]
edcp         = "edcp.__main__:main"
data-compare = "data_compare.main:main"

[tool.setuptools.packages.find]
where   = ["."]
include = ["edcp*", "data_compare*"]
